--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,38 @@
-<h1>Cúrsame</h1>
-<p><%= link_to 'Registro como maestro', new_teacher_user_registration_path %></p>
-<p><%= link_to 'Registro como alumno', new_student_user_registration_path %></p>
+<%= render :partial => "shared/topbar" %>
+
+<div class="container">
+  <div class="register-box">
+    <form>
+      <fieldset>
+        <legend>Register</legend>
+        <div class="clearfix">
+          <label for="xlInput">Email</label>
+          <div class="input">
+            <input class="xlarge" id="xlInput" name="xlInput" size="30" type="text" />
+          </div>
+        </div><!-- /clearfix -->
+        
+        <div class="clearfix">
+          <label for="xlInput">Password</label>
+          <div class="input">
+            <input class="xlarge" id="xlInput" name="xlInput" size="30" type="password" />
+          </div>
+        </div><!-- /clearfix -->
+        
+        <div class="clearfix">
+          <label for="xlInput">Password Confirmation</label>
+          <div class="input">
+            <input class="xlarge" id="xlInput" name="xlInput" size="30" type="password" />
+          </div>
+        </div><!-- /clearfix -->
+        
+        <div class="actions">
+          <input type="submit" class="btn" value="Register">
+        </div>
+        
+      </fieldset>
+    </form>
+  </div>
+</div>
+<%= link_to 'Registro como alumno', new_student_user_registration_path %>
+<%= render :partial => "shared/footer" %>
