--- a/app/views/registrations/new.haml
+++ b/app/views/registrations/new.haml
@@ -1,12 +1,12 @@
+= debug params
 = semantic_form_for resource, :as => resource_name, :url => registration_path(resource_name) do |form|
   = devise_error_messages!
   = form.inputs :basic do
     = form.input :email
     = form.input :password
     = form.input :password_confirmation
-    = form.input :role, :as => :hidden, :value => params[:role] 
 
   = form.buttons do
-    = form.commit_button
+    = form.commit_button :button_html => {:id => :register}
 
 = render :partial => "devise/shared/links"
