--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,2 +1,4 @@
-<p>This is the footer content</p>
-<p><%= link_to 'Registro como maestro', new_teacher_user_registration_path %></p>
+<div class="container">
+  <p>This is the footer content</p>
+  <p><%= link_to 'Registro como maestro', new_teacher_user_registration_path %></p>
+</div>
