--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -3,6 +3,19 @@
 <div class="container">
   <div class="register-box">
     
+    <%= semantic_form_for resource, :as => resource_name, :url => registration_path(resource_name) do |form| %>
+      <%= devise_error_messages! %>
+      <%= form.inputs :basic do %>
+        <%= form.input :email %>
+        <%= form.input :password %>
+        <%= form.input :password_confirmation %>
+        <%= form.input :role, :as => :hidden, :value => params[:role] %>
+      <% end %>
+      <%= form.buttons do %>
+        <%= form.commit_button %>
+      <% end %>
+    <% end %>
+    
     <form>
       <fieldset>
         <legend>Register</legend>
