--- a/app/views/devise/shared/_links.haml
+++ b/app/views/devise/shared/_links.haml
@@ -1,8 +1,8 @@
 %ul#auth_links
   - if controller_name != 'sessions'
     %li= link_to "Sign in", new_user_session_path
-  - if devise_mapping.registerable? && controller_name != 'registrations'
-    %li= link_to "Sign up", sign_up_path
+  -# - if devise_mapping.registerable? && controller_name != 'registrations'
+  -#   %li= link_to "Sign up", sign_up_path
   - if devise_mapping.recoverable? && controller_name != 'passwords'
     %li= link_to "Forgot your password?", new_user_password_path
   - if devise_mapping.confirmable? && controller_name != 'confirmations'
