--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,36 +2,7 @@
 
 <div class="container">
   <div class="register-box">
-    <form>
-      <fieldset>
-        <legend>Register</legend>
-        <div class="clearfix">
-          <label for="xlInput">Email</label>
-          <div class="input">
-            <input class="xlarge" id="xlInput" name="xlInput" size="30" type="text" />
-          </div>
-        </div><!-- /clearfix -->
-        
-        <div class="clearfix">
-          <label for="xlInput">Password</label>
-          <div class="input">
-            <input class="xlarge" id="xlInput" name="xlInput" size="30" type="password" />
-          </div>
-        </div><!-- /clearfix -->
-        
-        <div class="clearfix">
-          <label for="xlInput">Password Confirmation</label>
-          <div class="input">
-            <input class="xlarge" id="xlInput" name="xlInput" size="30" type="password" />
-          </div>
-        </div><!-- /clearfix -->
-        
-        <div class="actions">
-          <input type="submit" class="btn" value="Register">
-        </div>
-        
-      </fieldset>
-    </form>
+    <%= render :partial => 'registrations/form', :locals => {:resource => @user, :resource_name => 'student_user', :url => student_user_registration_path} %>
   </div>
 </div>
 <%= link_to 'Registro como alumno', new_student_user_registration_path %>
