Some more changes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => "shared/topbar" %>
+<%= render :partial => "shared/topbar_with_login" %>
 
 <div class="container">
   <div class="register-box">
