devise forms with formtastic

--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -6,4 +6,5 @@
   </div>
 </div>
 <%= link_to 'Registro como alumno', new_student_user_registration_path %>
+<%= render :partial => "devise/shared/links" %>
 <%= render :partial => "shared/footer" %>
