--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,6 @@
-<div class="container">
-  <p>This is the footer content</p>
-  <p><%= link_to 'Registro como maestro', new_teacher_user_registration_path %></p>
-</div>
+<footer>
+  <div class="container">
+    <p>This is the footer content</p>
+    <p><%= link_to 'Registro como maestro', new_teacher_user_registration_path %></p>
+  </div>
+</footer>
