--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,14 @@
 <%= render :partial => "shared/topbar_with_login" %>
 
-<div class="container">
-  <div class="register-box">
-    <%= render :partial => 'registrations/form', :locals => {:resource => @user, :resource_name => 'student_user', :url => student_user_registration_path} %>
+<div class="container top-margin-100">
+  <div class="row">
+    <div class="span11">
+      <p>Creamos <b>Redes Sociales</b> especialmente <b>diseñadas</b> para el <b>aprendizaje en línea.</b></p>
+    </div>
+    <div class="span5">
+      <%= render :partial => 'registrations/form', :locals => {:resource => @user, :resource_name => 'student_user', :url => student_user_registration_path} %>
+    </div>
   </div>
 </div>
-<%= link_to 'Registro como alumno', new_student_user_registration_path %>
+
 <%= render :partial => "shared/footer" %>
