--- a/app/views/shared/_topbar_with_login.html.erb
+++ b/app/views/shared/_topbar_with_login.html.erb
@@ -7,10 +7,10 @@
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-      <form action="" class="pull-right">
-        <input class="input-small" type="text" placeholder="Username">
-        <input class="input-small" type="password" placeholder="Password">
-        <button class="btn" type="submit">Sign in</button>
+      <form action="<%= user_session_path %>" class="pull-right" method="post">
+        <input class="input-small" name="user[email]" type="text" placeholder="Username">
+        <input class="input-small" name="user[password]" type="password" placeholder="Password">
+        <button class="btn" type="submit" id="sign_in">Sign in</button>
       </form>
     </div>
   </div>
