header in layout

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,6 @@
-<%= render :partial => "shared/topbar_with_login" %>
+<% content_for :header do %>
+  <%= render :partial => "shared/topbar_with_login" %>
+<% end %>
 
 <div class="container top-margin-100">
   <div class="row">
