--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <%= render :partial => "shared/topbar_with_login" %>
 <% end %>
 
-<div class="container top-margin-100">
+<div class="container">
   <div class="row">
     <div class="span11">
       <p>Creamos <b>Redes Sociales</b> especialmente <b>diseñadas</b> para el <b>aprendizaje en línea.</b></p>
