--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -1,12 +1,13 @@
 <div class="register-box">
+  <h1><%= t('forms.register_slogun') %></h1>
   <%= semantic_form_for resource, :as => resource_name, :url => url do |form| %>
     <%= form.inputs :basic do %>
-      <%= form.input :email, :input_html => { :placeholder => "Username" } %>
-      <%= form.input :password, :input_html => { :placeholder => "Password" } %>
-      <%= form.input :password_confirmation, :input_html => { :placeholder => "password Confirmation" } %>
+      <%= form.input :email, :input_html => { :placeholder => t('forms.email') } %>
+      <%= form.input :password, :input_html => { :placeholder => t('forms.password') } %>
+      <%= form.input :password_confirmation, :input_html => { :placeholder => t('forms.password_confirmation') } %>
     <% end %>
     <%= form.buttons do %>
-      <%= form.commit_button :button_html => {:id => :register, :class => "btn" } %>
+      <%= form.commit_button :button_html => {:id => :register, :class => "btn", :value => t('forms.register_btn') } %>
     <% end %>
   <% end %>
 </div>
