--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Courses#index</h1>
-<p>Find me in app/views/courses/index.html.erb</p>
+<div class="container" style="margin-top:100px;">
+
+  <h1><%= t('.title') %></h1>
+
+  <ul>
+    <% @courses.each do |course| %>
+      <li class="course">
+      <%= course.name %><br/>
+      <%= course.description %>
+      </li>
+    <% end %>
+  </ul>
+
+</div>
