--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,16 +1,38 @@
-<h1>Crear Curso Nuevo</h1>
-
-<%= semantic_form_for @course do |form| %>
-  <%= form.inputs do %>
-    <%= form.input :name %>
-    <%= form.input :description %>
-    <%= form.input :start_date %>
-    <%= form.input :finish_date %>
-    <%= form.input :reference %>
-    <%= form.input :public %>
-  <% end %>
-
-  <%= form.buttons do %>
-    <%= form.commit_button :button_html => {:id => :submit} %>
-  <% end %>
+<% content_for :head do%>
+  <style type="text/css">
+    body {
+    	margin-top: 40px;
+    }
+  </style>
 <% end %>
+<div class="container">
+  <div class="content">
+    <div class="row">
+      <div class="span3">
+        <p>Something here</p>
+      </div>
+      <div class="span10">
+        <h1>Crear Curso Nuevo</h1>
+
+        <%= semantic_form_for @course do |form| %>
+          <%= form.inputs do %>
+            <%= form.input :name %>
+            <%= form.input :description %>
+            <%= form.input :start_date %>
+            <%= form.input :finish_date %>
+            <%= form.input :reference %>
+            <%= form.input :public %>
+          <% end %>
+
+          <%= form.buttons do %>
+            <%= form.commit_button :button_html => {:id => :submit} %>
+          <% end %>
+        <% end %>
+      </div>
+      <div class="span3" style="margin:0;">
+        <p>Something else here</p>
+      </div>
+    </div>
+  </div>
+  <%= render :partial => "shared/footer" %>
+</div>
