Initial courses show page

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -4,6 +4,11 @@
     	margin-top: 40px;
     }
   </style>
+  <script>
+    $(document).ready(function(){ 
+      $("#sortTableExample").tablesorter( { sortList: [[ 1, 0 ]] } )
+    });
+  </script>
 <% end %>
 <div class="container">
   <div class="content">
@@ -12,9 +17,42 @@
         <p>Something here</p>
       </div>
       <div class="span10">
-      <h2><%= @course.name %></h2>
-      <p><%= @course.description %></p>
-      <p><%= @course.reference %></p>
+        <h2><%= @course.name %></h2>
+        <p><%= @course.description %></p>
+        <p><%= @course.reference %></p>
+        <div class="section-divider"><h3><%= t('courses.archives') %></h3></div>
+        
+        <table class="zebra-striped" id="sortTableExample">
+          <thead>
+            <tr>
+              <th class="blue">Type</th>
+              <th class="blue">File Name</th>
+              <th class="blue">File Desc.</th>
+              <th class="blue">Date Uploaded</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Your</td>
+              <td>One</td>
+              <td>English</td>
+              <td>09/11/2011</td>
+            </tr>
+            <tr>
+              <td>Joe</td>
+              <td>Sixpack</td>
+              <td>English</td>
+              <td>09/13/2011</td>
+            </tr>
+            <tr>
+              <td>Stu</td>
+              <td>Dent</td>
+              <td>Code</td>
+              <td>09/09/2011</td>
+            </tr>
+          </tbody>
+        </table>
+        
       </div>
       <div class="span3" style="margin:0;">
         <p>Something else here</p>
