--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -35,14 +35,25 @@ selected: #e0f5f8
 
 .content .span3  {
 	width: 180px;
+	padding-top: 10px;
 }
 
 .content .span10 {
 	border-left: 1px solid #eaeaea;
 	border-right: 1px solid #eaeaea;
 	margin-left: 0;
-	padding-left: 20px;
-	width: 550px;
+	width: 530px;
+	padding: 10px 20px 0;
+}
+
+.section-divider {
+	background-color: #eaeaea;
+	margin-bottom: 20px;
+}
+
+.section-divider h3 {
+	margin-left: 10px;
+	text-shadow: 1px 1px 1px rgba(255,255,255,1);
 }
 
 /* @end */
