Changed fields name

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -33,21 +33,21 @@
           </thead>
           <tbody>
             <tr>
-              <td>Your</td>
-              <td>One</td>
-              <td>English</td>
+              <td>PNG</td>
+              <td>sdfsdfs</td>
+              <td>sdgfdfgrtg</td>
               <td>09/11/2011</td>
             </tr>
             <tr>
-              <td>Joe</td>
-              <td>Sixpack</td>
-              <td>English</td>
+              <td>RTF</td>
+              <td>sdgsdfg</td>
+              <td>sdgdfgdfger</td>
               <td>09/13/2011</td>
             </tr>
             <tr>
-              <td>Stu</td>
-              <td>Dent</td>
-              <td>Code</td>
+              <td>PDF</td>
+              <td>sadgcvdfg</td>
+              <td>dsfergdg</td>
               <td>09/09/2011</td>
             </tr>
           </tbody>
