--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -21,7 +21,10 @@
 
             <p style="color:red;">
             <% enrollment = current_user.enrollments.where(:course_id => course).first %>
-            <% if enrollment.pending? %>
+            <% if !enrollment %>
+              <%= link_to t(".request_join"), join_course_path(course), :method => :post %>
+
+            <% elsif enrollment.pending? %>
               <em><%= t('.join_requested') %></em>
 
             <% elsif enrollment.accepted? %>
@@ -31,8 +34,6 @@
             <% elsif enrollment.accepted? %>
               <em><%= t('.join_accepted') %></em>
 
-            <% else %>
-              <%= link_to t(".request_join"), join_course_path(course), :method => :post %>
             <% end %>
             </p>
 
