course can be updated

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="content">
     <div class="row">
+      <img src="<%= @course.logo_file.small.url %>"/>
       <div class="span3">
         <p>Something here</p>
       </div>
