--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -14,7 +14,7 @@
   <div class="content">
     <div class="row">
       <div class="span3">
-        <p>Something here</p>
+        <%= render :partial => "course_menu" %>
       </div>
       <div class="span10">
         <h2><%= @course.name %></h2>
@@ -73,7 +73,7 @@
         
       </div>
       <div class="span3" style="margin:0;">
-        <p>Something else here</p>
+        <%= render :partial => "shared/adds" %>
       </div>
     </div>
   </div>
