--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -4,6 +4,7 @@
       <img src="<%= @course.logo_file.small.url %>"/>
       <div class="span3">
         <%= render :partial => "course_menu" %>
+        <%= render :partial => "members_menu" %>
       </div>
       <div class="span10">
         <h2><%= @course.name %></h2>
