added js to truncate course descriptions

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -21,7 +21,7 @@
         </div>
         <div class="row with line">
           <div class="description"><%= t('courses.description') %></div>
-          <p><%= @course.description %></p>
+          <div class="expander"><p><%= @course.description %></p></div>
         </div>
         <div class="row with">
           <div class="description"><%= t('courses.details') %></div>
