--- a/app/views/courses/_members_menu.html.erb
+++ b/app/views/courses/_members_menu.html.erb
@@ -1,6 +1,6 @@
 <div class="underline">	
   <ul class="left-nav-main-ul">
-    <li><%= link_to(t('courses.menu.members'), "#", :class => "miembros") %></li>
+    <li><%= link_to(t('courses.menu.members'), members_course_path, :class => "miembros") %></li>
   </ul>
   <div class="total-members">20 <%= t('courses.menu.members')%></div>
   <ul class="nav-member-avatars">
