--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -51,6 +51,8 @@
               <% end %>
             </tbody>
           </table>
+        <% else %>
+          <p>No hay archivos del curso.</p>
         <% end %>
       </div>
       <div class="span3" style="margin:0;">
