--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -1,7 +1,9 @@
 <div class="topbar">
   <div class="fill">
     <div class="container">
-      <%= link_to image_tag("logo.png"), root_url, :class => "brand" %>
+      <div class="logo-container">
+        <%= link_to image_tag("logo.png"), root_url, :class => "brand" %>
+      </div>
       <form class="pull-left" action="">
         <input type="text" placeholder="Buscar" />
       </form>
@@ -14,7 +16,7 @@
 
       <ul class="nav secondary-nav">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle">Username</a>
+          <%= link_to t('.logout'), destroy_user_session_path, :method => :delete, :class => "dropdown-toggle" %>
           <ul class="dropdown-menu">
             <li><a href="#">Secondary link</a></li>
             <li><a href="#">Something else here</a></li>
