--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -2,14 +2,14 @@
   <div class="content">
     <div class="row">
       <div class="span3">
-        <p>Something here</p>
+        <%= render :partial => "course_menu" %>
       </div>
       <div class="span10">
         <h1>Crear Curso Nuevo</h1>
         <%= render :partial => 'form' %>
       </div>
       <div class="span3" style="margin:0;">
-        <p>Something else here</p>
+        <%= render :partial => 'shared/adds' %>
       </div>
     </div>
   </div>
