--- a/app/views/courses/requests.html.erb
+++ b/app/views/courses/requests.html.erb
@@ -1,12 +1,28 @@
-<h1>Pending requests</h1>
+<div class="container">
+  <div class="content">
+    <div class="row">
+      <div class="span3">
+        <%= render :partial => "course_menu" %>
+      </div>
+      <div class="span10">
+        <h2><%= t('courses.requests.pending_requests') %></h2>
 
-<ul>
-  <% @requests.each do |request| %>
-    <li class="request">
-    <%= request.user.email %>
-    <%= link_to 'Accept', course_accept_request_path(@course, request.id), :method => :post %>
-    <br/>
-    <%= link_to 'Reject', course_reject_request_path(@course, request.id), :method => :post %>
-    </li>
-  <% end %>
-</ul>
+        <div>
+          <% @requests.each do |request| %>
+            <div class="request">
+            <%= request.user.email %>
+            <%= link_to 'Accept', course_accept_request_path(@course, request.id), :method => :post %>
+            <br/>
+            <%= link_to 'Reject', course_reject_request_path(@course, request.id), :method => :post %>
+            </div>
+          <% end %>
+        </div>
+        
+      </div>
+      <div class="span3" style="margin:0;">
+        <%= render :partial => "shared/adds" %>
+      </div>
+    </div>
+  </div>
+  <%= render :partial => "shared/footer" %>
+</div>
