--- a/app/views/courses/members.html.erb
+++ b/app/views/courses/members.html.erb
@@ -5,7 +5,7 @@
         <%= render :partial => "course_menu" %>
       </div>
       <div class="span10">
-        <h2><%= t('courses.members.members_in_group') %></h2>
+        <h2><%= t('courses.members.members_in_course') %></h2>
 
         <h3><%= t('courses.members.teachers') %></h3>
         <div class="members">
