--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -2,7 +2,7 @@
   <div class="content">
     <div class="row">
       <div class="span3">
-        <p>Something here</p>
+        <%= render :partial => 'menu' %>
       </div>
       <div class="span10">
         <%= t('.my_courses') %>
