--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,10 @@
+<% content_for :head do %>
+  <style>
+    body {
+      margin-top: 100px;
+    }
+  </style>
+<% end %>
 <div class="container">
   <div class="row">
     <div class="span11">
