--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -1,13 +1,20 @@
 <div class="register-box">
-  <h1><%= t('forms.register_slogun') %></h1>
+  <h1><%= t("forms.register_#{params[:controller] == 'registrations' ? role : 'student'}") %></h1>
   <%= semantic_form_for resource, :as => resource_name, :url => url do |form| %>
     <%= form.inputs :basic do %>
-      <%= form.input :email, :input_html => { :placeholder => t('forms.email') } %>
-      <%= form.input :password, :input_html => { :placeholder => t('forms.password') } %>
-      <%= form.input :password_confirmation, :input_html => { :placeholder => t('forms.password_confirmation') } %>
+      <%= form.input :email, :input_html => { :placeholder => t('forms.email') + " *" } %>
+      <%= form.input :first_name, :input_html => { :placeholder => t('forms.first_name') + " *", :class => "names", :style => 'margin-right:10px;' }%>
+      <%= form.input :last_name, :input_html => { :placeholder => t('forms.last_name'), :class => "names" } %>
+      <%= form.input :password, :input_html => { :placeholder => t('forms.password') + " *" } %>
+      <%= form.input :password_confirmation, :input_html => { :placeholder => t('forms.password_confirmation') + " *" } %>
     <% end %>
     <%= form.buttons do %>
       <%= form.commit_button :button_html => {:id => :register, :class => "btn", :value => t('forms.register_btn') } %>
+    <% end %>
+    <% unless params[:controller] == 'registrations' %>
+      <%= link_to t('forms.register_teacher'), new_teacher_user_registration_path %>
+    <% else %>
+      <%= link_to t('forms.register_student'), root_url %>
     <% end %>
   <% end %>
 </div>
