--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -12,6 +12,7 @@
         <li class="active"><%= link_to('Inicio', root_path) %></li>
         <li><a href="#">Perfil</a></li>
         <li><a href="#">Bandeja de Entrada</a></li>
+        <li><%= link_to t('.logout'), destroy_user_session_path, :method => :delete %></li>
       </ul>
 
       <ul class="nav secondary-nav">
@@ -25,7 +26,7 @@
           </ul>
         </li>
       </ul>
-    
+      
     </div>
   </div>
 </div>
